logs/postgres_operator_dag/create_pet_table/2021-12-13T20:38:26.400519+00:00/1.log
[2021-12-13 20:38:26,771] {taskinstance.py:1035} INFO - Dependencies all met for <TaskInstance: postgres_operator_dag.create_pet_table manual__2021-12-13T20:38:26.400519+00:00 [queued]>
[2021-12-13 20:38:26,783] {taskinstance.py:1035} INFO - Dependencies all met for <TaskInstance: postgres_operator_dag.create_pet_table manual__2021-12-13T20:38:26.400519+00:00 [queued]>
[2021-12-13 20:38:26,783] {taskinstance.py:1241} INFO - 
--------------------------------------------------------------------------------
[2021-12-13 20:38:26,783] {taskinstance.py:1242} INFO - Starting attempt 1 of 1
[2021-12-13 20:38:26,783] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2021-12-13 20:38:26,795] {taskinstance.py:1262} INFO - Executing <Task(PostgresOperator): create_pet_table> on 2021-12-13 20:38:26.400519+00:00
[2021-12-13 20:38:26,801] {standard_task_runner.py:52} INFO - Started process 3496 to run task
[2021-12-13 20:38:26,804] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_dag', 'create_pet_table', 'manual__2021-12-13T20:38:26.400519+00:00', '--job-id', '13', '--raw', '--subdir', 'DAGS_FOLDER/example_postgres.py', '--cfg-path', '/tmp/tmpdh2_s7kn', '--error-file', '/tmp/tmp5q6gt0cw']
[2021-12-13 20:38:26,805] {standard_task_runner.py:77} INFO - Job 13: Subtask create_pet_table
[2021-12-13 20:38:26,846] {logging_mixin.py:109} INFO - Running <TaskInstance: postgres_operator_dag.create_pet_table manual__2021-12-13T20:38:26.400519+00:00 [running]> on host ef07609851a1
[2021-12-13 20:38:26,898] {taskinstance.py:1429} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=postgres_operator_dag
AIRFLOW_CTX_TASK_ID=create_pet_table
AIRFLOW_CTX_EXECUTION_DATE=2021-12-13T20:38:26.400519+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-12-13T20:38:26.400519+00:00
[2021-12-13 20:38:26,909] {base.py:79} INFO - Using connection to: id: postgres_***_db. Host: postgres-***, Port: 5432, Schema: , Login: ***, Password: ***, extra: {}
[2021-12-13 20:38:26,914] {dbapi.py:225} INFO - Running statement: -- create hello_world_table
DROP TABLE IF EXISTS pet
CREATE TABLE pet (
    pet_id SERIAL PRIMARY KEY,
    name VARCHAR NOT NULL,
    pet_type VARCHAR NOT NULL,
    birth_date DATE NOT NULL,
    OWNER VARCHAR NOT NULL
    );, parameters: None
[2021-12-13 20:38:26,914] {taskinstance.py:1703} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1332, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1458, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1514, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CREATE"
LINE 3: CREATE TABLE pet (
        ^

[2021-12-13 20:38:26,928] {taskinstance.py:1280} INFO - Marking task as FAILED. dag_id=postgres_operator_dag, task_id=create_pet_table, execution_date=20211213T203826, start_date=20211213T203826, end_date=20211213T203826
[2021-12-13 20:38:26,946] {standard_task_runner.py:91} ERROR - Failed to execute job 13 for task create_pet_table
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 292, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1332, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1458, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1514, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CREATE"
LINE 3: CREATE TABLE pet (
        ^

[2021-12-13 20:38:26,976] {local_task_job.py:154} INFO - Task exited with return code 1
[2021-12-13 20:38:27,020] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
